--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,25 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  body{
-    background: #111;
-    display: flex;
-    align-items: center;
+.container{
+    display: grid;
+    grid-template-columns: repeat(40, 20px);
+    grid-template-rows: repeat(20, 20px);
     justify-content: center;
+    align-content: center;
     height: 100vh;
-    overflow: hidden;
-    margin: 0;
-  }
-  .container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 800px;
-  }
-  .square{
-    background-color: #1d1d1d;
-    box-shadow: 0 0 2px #000;
-    height: 16px;
-    width: 16px;
-    margin: 2px;
-    transition: 1s ease;
-  }
-  
-  .square:hover{
-	background-color: #1fc;
-    transition-duration: 0s;
-  }
+}
+
+.square{
+	background-color: rgb(29, 29, 29);
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+    transition-delay: 0s;
+    transition-duration: 1s ease;
+    transition-timing-function: ease-in-out;
+}
+
+
+.square:hover{
+    background-color: red;
+    transition-property: background-color;
+    
+}
