--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,25 @@
-.container{	
-	background-color: rgb(29, 29, 29);
-    display: grid;
-    grid-template-columns: repeat(40, 20px);
-    grid-template-rows: repeat(20, 20px);
-    justify-content: center;
-    align-content: center;
-    height: 100vh;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f0f0f0;
 }
 
-.square{
-    width: 20px;
-    height: 20px;
-    border: 1px solid black;
-    transition-delay: 0s;
-    transition-duration: 1s ease;
-    transition-timing-function: ease-in-out;
+.container {
+  display: grid;
+  grid-template-columns: repeat(20, 40px); /* Adjust the number of columns to fit 800 squares */
+  gap: 2px;
 }
 
+.square {
+  width: 40px;
+  height: 40px;
+  background-color: #eaeaea;
+  transition: background-color 1s ease; /* Smooth color transition */
+}
 
-.square:hover{
-    background-color: red;
-    transition-property: background-color;
-    
+.square:hover {
+  background-color: #6c63ff;
 }
