--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,33 @@
-/*  your css code here. If applicable */
-.container {
-	margin: 0px;
-	padding: 10px;
-	background-color: black;
+* {
+    box-sizing: border-box;
+  }
+  
+  body{
+    background: #111;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+	width:100vw;
+    overflow: hidden;
+    margin: 0;
+  }
+  .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .square{
+    background-color: #1d1d1d;
+    box-shadow: 0 0 2px #000;
+    height: 16px;
+    width: 16px;
+    transition: 1s ease;
+  }
+  
+  .square:hover{
+    transition-duration: 0s;
+    background-color: rgba(31, 232, 208, 0.902);
 
-	display: grid;
-	grid-template-columns: repeat(10,10%);
-	row-gap:10px;
-	
-}
-.square {
-	height: 50px;
-	width: 50px;
-	background-color: grey;
-}
-
-.square:hover {
-	background-color: red;
-	transition-duration: 1s;
-}
+  }
