--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 .square {
   width: 40px;
   height: 40px;
-  background-color: #eaeaea;
+  background-color: rgb(29, 29, 29);
   transition: background-color 1s ease; /* Smooth color transition */
 }
 
