--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   }
   
   body{
-    background: #111;
+    background: grey;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,7 @@
   }
   .square{
     background-color: rgb(29,29,29);
-    box-shadow: 0 0 2px #000;
+    box-shadow: 0 0 2px black;
     height: 16px;
     width: 16px;
     margin: 2px;
@@ -28,7 +28,7 @@
   }
   
   .square:hover{
-    transition-duration: 0s;
+	  transition: 0s ease;
     background-color: rgba(31, 232, 208, 0.902);
 
   }
