--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,32 @@
 * {
     box-sizing: border-box;
-}
-
-body {
-    background: black;
+  }
+  
+  body{
+    background: #111;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     overflow: hidden;
     margin: 0;
-}
-
-.container {
-	margin: auto;
+  }
+  .container{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     max-width: 800px;
-}
-
-.square {
-    background-color: rgb(29, 29, 29);
-    box-shadow: 0 0 2px black;
+  }
+  .square{
+    background-color: #1d1d1d;
+    box-shadow: 0 0 2px #000;
     height: 16px;
     width: 16px;
     margin: 2px;
-    transition: 1s ease;
-}
-
-.square:hover {
-    background-color: rgb(31, 232, 208);
-}
+    transition: 5s ease;
+  }
+  
+  .square:hover{
+    transition-duration: 0s;
+  }
