--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 * {
-    box-sizing:* {
     box-sizing: border-box;
   }
   
@@ -25,41 +24,10 @@
     height: 16px;
     width: 16px;
     margin: 2px;
-    transition: 5s ease;
+    transition: 1s;
   }
   
   .square:hover{
-    background-color: aqua;
-    transition-duration: 0s;
-  }
- border-box;
-  }
-  
-  body{
-    background: #111;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-  }
-  .container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 800px;
-  }
-  .square{
-    background-color: #1d1d1d;
-    box-shadow: 0 0 2px #000;
-    height: 16px;
-    width: 16px;
-    margin: 2px;
-    transition: 1s ease;
-  }
-  
-  .square:hover{
+	  background-color: aqua;
     transition-duration: 0s;
   }
